LayoutSVGImage should work correctly even when image size is unavailable

Currently LayoutSVGImage::calculateObjectSize returns an invalid size (i.e.,
size containing NaN) when the image size is unavailable. This change fixes that.

BUG=675895
R=fs@opera.com, hiroshige@chromium.org
TEST=svg/custom/svg-image-intrinsic-size-with-cssstyle-auto.html

Review-Url: https://codereview.chromium.org/2592613002
Cr-Commit-Position: refs/heads/master@{#440177}

Former-commit-id: 43c7ce1974915502d40e84e8c3a2ae80d4c9037e